[project]
name = "retasc"
version = "0.1.0"
description = "Plans product release work in Jira based on schedules in Product Pages"
authors = [
  {name = "Red Hat, Inc. and others"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "retasc", from = "src"}]
requires-python = ">=3.12,<3.14"
dependencies = [
  "opentelemetry-sdk~=1.29.0",
  "opentelemetry-instrumentation-flask~=0.47b0",
  "opentelemetry-instrumentation-requests~=0.47b0",
  "opentelemetry-exporter-otlp-proto-http~=1.29.0",

  "requests~=2.32.0",
  "urllib3~=2.3.0",
  "pydantic~=2.10.5",
  "atlassian-python-api~=3.41.16",
  "Jinja2~=3.1.4",
  "ruamel-yaml~=0.18.6",
]

[project.urls]
Repository = "https://github.com/release-engineering/retasc"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[project.scripts]
retasc = "retasc.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
