[project]
name = "retasc"
version = "0.1.0"
description = "Plans product release work in Jira based on schedules in Product Pages"
authors = [
  {name = "Red Hat, Inc. and others"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "retasc", from = "src"}]
requires-python = ">=3.12,<3.14"

# dependencies are still managed in tool.poetry.dependencies to support
# Renovate: https://github.com/renovatebot/renovate/issues/33509
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/release-engineering/retasc"

[tool.poetry.dependencies]
opentelemetry-sdk = "^1.30.0"
opentelemetry-instrumentation-flask = "^0.51b0"
opentelemetry-instrumentation-requests = "^0.51b0"
opentelemetry-exporter-otlp-proto-http = "^1.30.0"

requests = "^2.32.0"
urllib3 = "^2.3.0"
pydantic = "^2.11.4"
atlassian-python-api = "^4.0.0"
Jinja2 = "^3.1.6"
ruamel-yaml = "^0.18.6"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[project.scripts]
retasc = "retasc.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = [
  "C",  # mccabe/complexity
  "I",  # isort
  "N",  # pep8-naming
  "UP",  # pyupgrade
  "FURB",  # refurb
  "PERF",  # Perflint
]

[tool.ruff.lint.mccabe]
max-complexity = 6
