[project]
name = "retasc"
version = "0.1.0"
description = "Plans product release work in Jira based on schedules in Product Pages"
authors = [
  {name = "Red Hat, Inc. and others"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "opentelemetry-sdk>=1.35.0,<2",
  "opentelemetry-instrumentation-flask>=0.56b0,<1",
  "opentelemetry-instrumentation-requests>=0.56b0,<1",
  "opentelemetry-exporter-otlp-proto-http>=1.35.0,<2",
  "requests>=2.32.4,<3",
  "urllib3>=2.3.0,<3",
  "pydantic>=2.11.7,<3",
  "atlassian-python-api>=4.0.7,<5",
  "Jinja2>=3.1.6,<4",
  "ruamel-yaml>=0.18.14,<0.19",
]

[project.urls]
Repository = "https://github.com/release-engineering/retasc"

[project.scripts]
retasc = "retasc.__main__:main"

[project.optional-dependencies]
dev = [
  "requests-mock>=1.12.1,<2",
  "pytest>=9.0.1,<10",
  "pytest-cov>=7.0.0,<8",
]
types = [
    "mypy>=1.18.2",
    "pip>=25.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retasc"]

[tool.ruff.lint]
extend-select = [
  "C",  # mccabe/complexity
  "I",  # isort
  "N",  # pep8-naming
  "UP",  # pyupgrade
  "FURB",  # refurb
  "PERF",  # Perflint
]

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
branch = true
